Fix email verification + refactor